@@ -7380,3 +7380,11 @@ def test_sys_argv_uninferable() -> None:
     sys_argv_value = list(a._infer())
     assert len(sys_argv_value) == 1
     assert sys_argv_value[0] is Uninferable
+
+
+def test_empty_format_spec() -> None:
+    """Regression test for https://github.com/pylint-dev/pylint/issues/9945."""
+    node = extract_node('f"{x:}"')
+    assert isinstance(node, nodes.JoinedStr)
+
+    assert list(node.infer()) == [util.Uninferable]
